<resources>
    <string name="app_name" translatable="false">EPHARMA</string>
    <string name="logIn">Log in</string>
    <string name="Search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="client">client</string>
    <string name="pharmacist">pharmacist</string>
    <string name="signin">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up_text">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="user_type">Choose user\'s type</string>
    <string name="get_started">GET STARTED ></string>
    <string name="chat_button" translatable="false">Message list</string>
    <string name="welcome_description">Find drugs easily and fast</string>
    <string name="welcome">welcome</string>
    <string name="order">Order</string>
    <string name="request_channel">A request has been completed</string>
    <string name="completed_Request" >has your request disponible</string>
    <string name="request_channel_desc" >Request notifications</string>
    <string name="conversation_title" translatable="false">Conversation: %1s</string>
    <string name="telephone_number" translatable="false">Telephone number</string>
    <string name="create_your_account">Create your account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="next">Next</string>
    <string name="username">Username</string>
    <string name="create">Create</string>
    <string-array name="pharmacies">
        <item>Pharmaprix</item>
        <item>Uniprix</item>
        <item>Proxim</item>
        <item>Accès Pharma</item>
        <item>Jean Coutu</item>
    </string-array>
</resources>