<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="center"
    android:paddingLeft="@dimen/et_paddingLeftRight"
    android:paddingRight="@dimen/et_paddingLeftRight"
    android:orientation="vertical"
    tools:context=".fragments.user.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="@dimen/tv_title_1_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/et_marginBot"
        android:gravity="center"
        android:text="@string/signin"
        android:textSize="@dimen/tv_title_1_size"
        android:padding="0dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:padding="@dimen/et_padding"

        android:inputType="textEmailAddress"
        android:textColor="@color/dark_blue"
        android:hint="@string/email"
        android:background="@drawable/edit_text_radius"/>

    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"

        android:inputType="textPassword"

        android:layout_height="@dimen/et_height"
        android:padding="@dimen/et_padding"
        android:layout_marginTop="@dimen/et_marginTop"
        android:textColor="@color/dark_blue"
        android:hint="@string/password"
        android:background="@drawable/edit_text_radius"/>

    <Button

        android:id="@+id/btn_login"

        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/btn_marginTop"
        android:background="@drawable/button_radius_primary_color"
        android:text="@string/signin"
        android:textStyle="bold"
        android:textSize="@dimen/tv_title_3_size"
        android:layout_gravity="center_horizontal|top"
        android:textColor="@color/second"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSignUp"
        android:layout_marginTop="@dimen/et_marginTop"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tv_title_3_size"
            android:textColor="@color/white"
            android:text="@string/sign_up_text"
            />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tv_title_3_size"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:text="@string/sign_up"
            />
    </LinearLayout>

</LinearLayout>