<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CreateClientFragment"
    android:background="@color/primary"
    >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_your_account"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="175dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:id="@+id/create_client_account_title"
            />

        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_client_account_title"
            android:layout_marginTop="120dp"
            android:hint="@string/first_name"
            android:textAlignment="center"
            android:inputType="text"
            android:id="@+id/client_first_name"
            android:autofillHints="name"
            />

        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/client_first_name"
            android:layout_marginTop="10dp"
            android:hint="@string/last_name"
            android:textAlignment="center"
            android:inputType="text"
            android:id="@+id/client_last_name"
            android:autofillHints="name"
            />

        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/client_last_name"
            android:layout_marginTop="10dp"
            android:hint="@string/address"
            android:textAlignment="center"
            android:inputType="text"
            android:id="@+id/client_address"
            android:autofillHints="postalAddress"
            />

        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/client_address"
            android:layout_marginTop="10dp"
            android:hint="@string/telephone_number"
            android:textAlignment="center"
            android:inputType="phone"
            android:id="@+id/client_telephone_number"
            android:autofillHints="phone" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:text="@string/next"
            android:background="@drawable/button_radius_primary_color"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/client_telephone_number"
            android:id="@+id/signup"
            />

</androidx.constraintlayout.widget.ConstraintLayout>
