<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CreateUserFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="175dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:id="@+id/create_client_account_title"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_client_account_title"
        android:layout_marginTop="120dp"
        android:hint="@string/username"
        android:textAlignment="center"
        android:inputType="text"
        android:id="@+id/user_username"
       android:autofillHints="username"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_username"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:id="@+id/user_password"
        android:autofillHints="password"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:text="@string/create"
        android:background="@drawable/button_radius_primary_color"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_password"
        android:id="@+id/user_create"
        />


</androidx.constraintlayout.widget.ConstraintLayout>