<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".fragments.welcome.TypeUserFragment">

    <TextView
        android:layout_width="@dimen/tv_title_1_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/et_marginBot"
        android:text="@string/user_type"
        android:textSize="@dimen/tv_title_2_size"
        android:padding="0dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />
    <Button
        android:id="@+id/btn_pharma"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/btn_welcome_marginTop"
        android:background="@drawable/button_radius_primary_color"
        android:text="@string/pharmacist"
        android:textStyle="bold"
        android:textSize="@dimen/tv_title_3_size"
        android:gravity="center"
        android:textColor="@color/second"/>
    <Button
        android:id="@+id/btn_client"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/btn_welcome_marginTop"
        android:background="@drawable/button_radius_primary_color"
        android:text="@string/client"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/tv_title_3_size"
        android:layout_gravity="center_horizontal|top"
        android:textColor="@color/second"/>
</LinearLayout>